# excalibur-cli

./: .envrc  .gitignore  CLAUDE.md  README.md  flake.nix  worklog.md  代码笔记.txt
.claude/rules/: core.md  history.md  proctrace.md  settings.md
excalibur/: Cargo.toml  DEVELOPMENT.md  FISH_INTEGRATION.md  README.md
excalibur/install/: README.md  complete.fish  excc.fish  exh.fish
excalibur/src/: app.rs  event.rs  main.rs  ui.rs  view.rs
excalibur/src/modules/: manager.rs  mod.rs
excalibur/src/modules/history/: clipboard.rs  mod.rs  parser.rs  state.rs  ui.rs
excalibur/src/modules/proctrace/: collector.rs  mod.rs  network.rs  query.rs  state.rs  systemd.rs  ui.rs
excalibur/src/modules/settings/: mod.rs  state.rs  ui.rs
worklog/: worklog.md
