[package]
name = "excalibur"
version = "0.1.0"
description = "Excalibur CLI (xcl) - A unified command-line interface built in Rust, integrating multiple tools and workflows into a single, cohesive experience."
authors = ["lxb <liuxiaobo666233@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = "0.4"
arboard = "3.4"
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
